style.css
body {
  background-color: black;
  color: white;
  font-family: sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  min-height: 100vh;
}

code {
  background-color: #53d16e;
  color: black;
  font-weight: bold;
  padding-left: 5px;
  padding-right: 5px;
}

div {
  margin-top: 10px;
}

.hasBackgroundZone {
  text-align: left;
  background-color: grey;
  color: #000;
  padding: 10px 10px 10px 10px;
}

